--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,9 @@
                 </div>
             </div>
         </header>
+        <div class="image__one">
+            
+        </div>
     </section>
 </body>
 </html>
