--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,7 @@
                 </div>
             </div>
         </header>
-        <div class="image__one">
-            
+        <div class="leg">
         </div>
     </section>
 </body>
