media-section-one

--- a/src/index.html
+++ b/src/index.html
@@ -28,8 +28,10 @@
                 </div>
             </div>
         </header>
-        <div class="leg">
-        </div>
+        <div class="background__one"></div>
+        <div class="circle"></div>
+        <div class="leg"></div>
+        
     </section>
 </body>
 </html>
